<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_title_text">My Nanodegree Apps!</string>
    <string name="streamer">SPOTIFY STREAMER</string>
    <string name="score">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="build_it">BUILD IT BIGGER</string>
    <string name="xyz_app">XYZ READER</string>
    <string name="capstone_app">CAPSTONE: MY OWN APP</string>
    <string name="title_activity_spotify_streamer">Spotify Streamer</string>
    <string name="search_an_artist">search artist</string>
    <string name="desc_author_image">This is the image to show the cover of an author</string>
    <string name="title_activity_artist_tracks">Top 10 Tracks</string>
    <string name="artist_not_found">Artist not found, try with other name.</string>
    <string name="title_activity_track_player">TrackPlayerActivity</string>
    <string name="initial_player_time">0:00</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_cannot_skip">Cannot skip</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="play_item">Play item</string>
    <string name="skip_previous">Skip to previous</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">Skip to next</string>
    <string name="no_search_results">No search results.</string>
    <string name="title_activity_spotify_streamer_main">SpotifyStreamerMainActivity</string>
    <string name="title_activity_spotify_track_player">SpotifyTrackPlayerActivity</string>
</resources>
